force-app/main/default/objects/OA_Field_Write_Policy__mdt/OA_Field_Write_Policy__mdt.object-meta.xml
<CustomObject>
    <label>OA Field Write Policy</label>
    <pluralLabel>OA Field Write Policies</pluralLabel>
</CustomObject>