force-app/main/default/objects/OA_Field_Write_Policy__mdt/fields/Confidence_Floor__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Floor__c</fullName>
    <label>Confidence Floor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>