force-app/main/default/objects/OA_Field_Write_Policy__mdt/fields/Conflict_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Behavior__c</fullName>
    <label>Conflict Behavior</label>
    <length>20</length>
    <type>Text</type>
</CustomField>