force-app/main/default/objects/OA_Field_Write_Policy__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>