force-app/main/default/objects/OA_Field_Write_Policy__mdt/fields/Trusted__c.field-meta.xml
<CustomField>
    <fullName>Trusted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trusted</label>
    <type>Checkbox</type>
</CustomField>